<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">飞搜</string>
    <string name="action_settings">Settings</string>
    <string name="log">登录</string>
    <string name="reg">注册</string>
    <string name="again">重发注册邮件</string>
    <string name="reflash">重设</string>
    <string name="usrname">用户名</string>
    <string name="password">密码</string>
    <string name="mail">邮件</string>
    <string name="nickname">昵称</string>
    <string name="grou">进入</string>
    <string name="back">返回</string>
    <string name="addg">添加新组</string>
    <string name="ds">删除</string>
    <string name="xs">修改</string>
    <string name="adds">添加</string>
    <string name="check">签到</string>
    <string name="its">确认</string>
    <string name="chck">返回</string>

</resources>
