<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bp6"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    <LinearLayout 
        android:layout_marginTop="250dp"
        android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal">
        <TextView
        android:id="@+id/zhucename" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        
        android:text="用户名"/>
        <EditText
        android:id="@+id/usrname1"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:singleLine="true"
       />
    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal">
        <TextView
        android:id="@+id/zhucepass" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        
        android:text="\t密码 \t"/>
         <EditText
        android:id="@+id/password1"
        android:password="true"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:singleLine="true"
       />
    </LinearLayout>
  <LinearLayout 
        android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal">
        <TextView
        android:id="@+id/zhucemail" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        
       android:text="\t邮箱 \t"/>
          <EditText
        android:id="@+id/mail"
        android:inputType="textEmailAddress"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:singleLine="true"
         />
    </LinearLayout>
   <LinearLayout 
        android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal">
        <TextView
        android:id="@+id/zhucemail" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        
        android:text="\t昵称\t"/>
         <EditText
        android:id="@+id/nickname"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:singleLine="true"
         />
    </LinearLayout>
    

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
         >

        <Button
            android:id="@+id/reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/reg"/>
        <Button
            android:id="@+id/again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/again"/>
        <Button
            android:id="@+id/reflash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/reflash"/>
    </RelativeLayout>

</LinearLayout>
